--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -245,47 +245,57 @@
 
                 <div class="col-12">
                     <h3 class="heading">
-                        <  footer  >
+                        < footer>
 
                     </h3>
                 </div>
 
                 <div class="col-12">
-                        <label class="contact-label" for="contact">
-                            Contact
-                        </label>
-                    </div>
+                    <label class="contact-label" for="contact">
+                        Contact
+                    </label>
+                </div>
 
                 <div class="col-xs-6 col-md-4">
 
 
 
-                        <label class="contact" for="profile-shortDesc">
-                            Github
-                        </label>
-                        <input id="github" class="form-control" type="text" name="contac"
-                            maxlength="200" placeholder="www.github.com/myawesomerepo">
-                    </div>
-    
-    
-    
-                    <div class="col-6">
-    
-    
-                        <label class="profile-label" for="profile-img">
-                            Profile Image.
-                        </label>
-                        <small>Please enter the URL of your profile image</small>
-                        <input id="profileImg" name="imgURL" class="form-control" type="text" maxlength="200"
-                            placeholder="http://www.picturehost.com/mypic.jpg" value required>
-    
-                    </div>
+                    <label class="contact" for="profile-contact">
+                        Github
+                    </label>
+                    <input id="github" class="form-control" type="text" name="github" maxlength="50"
+                        placeholder="www.github.com/myawesomerepo">
+                </div>
+
+
+
+                <div class="col-xs-6 col-md-4">
+
+
+                    <label class="profile-label" for="profile-contact">
+                        LinkedIn
+                    </label>
+                    <input id="linkedin" class="form-control" type="text" name="linkedin" maxlength="50"
+                        placeholder="http://linkedin.com/srs_business_profile">
+
+                </div>
+
+                <div class="col-xs-6 col-md-4">
+
+
+                    <label class="profile-label" for="profile-contact">
+                        Twitter
+                    </label>
+                    <input id="twitter" class="form-control" type="text" name="twitter" maxlength="50"
+                        placeholder="http://www.twitter.com/tweetweet">
+
+                </div>
 
 
 
             </div>
 
-            <button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn"
+            <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn"
                 value="publish">Publish
                 your Profile</button>
 
