Complete myprofile functionality.

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -16,8 +16,11 @@
             </div>
 
 
-
         </div>
+
+        <!-- Display flashed messages. -->
+
+        {% include 'components/message.html' %}
 
         <form id="profile-form" method="POST">
 
