re-order elements in myprofile.html

--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -10,7 +10,7 @@
             </div>
 
 
-            <div class="col-12 page-header-box">
+            <div class="col-12">
                 <h3 class="heading text-center">My Profile</h3>
                 <div class="heading-ul"></div>
             </div>
@@ -26,7 +26,7 @@
 
 
 
-            <div class="form-row">
+            <div class="row">
 
                 <div class="col-12">
                     <h3 class="heading">
@@ -63,7 +63,7 @@
 
 
             <div class="form-group">
-                <div class="form-row">
+                <div class="row">
 
                     <div class="col-12">
                         <label class="profile-label" for="profile-district">
@@ -96,28 +96,29 @@
             </div>
             <div class="form-group">
 
-                <div class="form-row">
 
-                    <div class="col-12">
 
-                        <h3 class="heading">
-                            < body>
-                                </header>
-                        </h3>
+                <div class="col-12">
 
-                    </div>
+                    <h3 class="heading">
+                        < body>
+                            </header>
+                    </h3>
 
-                    <!-- MY SKILLS SECTION -->
+                </div>
 
-                    <div class="col-12">
-                        <label class="profile-label" for="profile-skills">
-                            My skills
-                        </label>
-                    </div>
+                <!-- MY SKILLS SECTION -->
 
-                    <!-- The Tabs -->
+                <div class="col-12">
+                    <label class="profile-label" for="profile-skills">
+                        My skills
+                    </label>
+                </div>
 
-                    <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
+                <!-- The Tabs -->
+
+                <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
+                <div class="row">
                     <nav>
                         <ul class="nav nav-tabs">
 
@@ -134,10 +135,14 @@
 
                         </ul>
                     </nav>
+                </div>
+                <!-- Tab Contents -->
 
-                    <!-- Tab Contents -->
+                <div class="row">
 
                     <div class="tab-content">
+
+
 
                         <!-- Begin "I'm proficient in..." Skills Tab -->
                         <div class="tab-pane container fade show active" id="skillsTab" role="tabpanel"
@@ -166,6 +171,8 @@
 
 
                         <!-- Begin "Looking for..." desired skills tab -->
+
+
                         <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
                             aria-labelledby="desiredSkills-tab">
 
@@ -191,10 +198,14 @@
                             </div>
                             <!-- End "Looking for..." desired skills tab -->
                         </div>
-                    </div>
-                </div>
 
+
+                    </div>
+
+                </div>
             </div>
+
+
             <!-- COMMUNICATION STYLE SECTION -->
 
             <div class="row">
@@ -303,6 +314,10 @@
                 your Profile</button>
 
         </form>
+
+
+
+    </div>
     </div>
 
 
