--- a/static/scss/_userarea.scss
+++ b/static/scss/_userarea.scss
@@ -8,6 +8,7 @@
 
 .welcome-row {
     height: 20vh;
+    margin-top: 25vh;
 }
 
 #account-dropdown {
@@ -26,4 +27,8 @@
 
 .profile-skill-column {
 padding: 0.3rem !important;
+}
+
+.profile-jumbo {
+    margin-top: 5vh;
 }
